--- a/backend/k8s-deployment.yaml
+++ b/backend/k8s-deployment.yaml
@@ -1,10 +1,4 @@
 ---
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: conduit
-
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -25,7 +19,7 @@ spec:
       - name: conduit-backend
         env:
         - name: SPRING_PROFILES_ACTIVE
-          value: dev
+          value: prod
         - name: DATABASE_USER
           valueFrom:
             secretKeyRef:
@@ -39,12 +33,10 @@ spec:
         - name: DATABASE_HOSTNAME
           value: conduit-db-rw
         - name: DATABASE_PORT
-          value: 5432
+          value: "5432"
         - name: DATABASE_NAME
           value: app
-        - name: APPLICATION_PROFILE
-          value: prod
-        image: jakobyte1024/conduit-backend:main
+        image: jakobyte1024/conduit-backend:sha-983d446
       restartPolicy: Always
 ---
 
