--- a/.github/workflows/platform-infrastructure-destroy.yml
+++ b/.github/workflows/platform-infrastructure-destroy.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Terraform apply
         run: |
-          terraform destroy --auto-approve -lock=false
+          terraform destroy --auto-approve
         shell: bash
 
   step2:
@@ -53,7 +53,7 @@ jobs:
 
       - name: Terraform apply
         run: |
-          terraform destroy --auto-approve -lock=false
+          terraform destroy --auto-approve
         shell: bash
 
   step1:
@@ -75,5 +75,5 @@ jobs:
       
       - name: Terraform apply
         run: |
-          terraform destroy --auto-approve -lock=false
+          terraform destroy --auto-approve
         shell: bash
