lock terraform state step3

--- a/.github/workflows/platform-infrastructure.yml
+++ b/.github/workflows/platform-infrastructure.yml
@@ -75,5 +75,5 @@ jobs:
 
       - name: Terraform apply
         run: |
-          terraform apply --auto-approve -lock=false
+          terraform apply --auto-approve
         shell: bash
