--- a/.github/workflows/platform-infrastructure-destroy.yml
+++ b/.github/workflows/platform-infrastructure-destroy.yml
@@ -75,5 +75,5 @@ jobs:
 
       - name: Terraform apply
         run: |
-          terraform destroy --auto-approve
+          terraform destroy --auto-approve -lock=false
         shell: bash
