--- a/.github/workflows/platform-infrastructure-destroy.yml
+++ b/.github/workflows/platform-infrastructure-destroy.yml
@@ -7,6 +7,11 @@ on:
         description: 'Target environment'
         required: true
         default: "test"
+      createPolicy:
+        description: 'Create tetragon policy'
+        required: true
+        type: bool
+        default: "false"
 
 env:
   TF_VAR_environment: '${{ github.event.inputs.environment }}'
