--- a/.github/workflows/platform-infrastructure-destroy.yml
+++ b/.github/workflows/platform-infrastructure-destroy.yml
@@ -15,6 +15,7 @@ on:
 
 env:
   TF_VAR_environment: '${{ github.event.inputs.environment }}'
+  TF_VAR_createPolicy: '${{ github.event.inputs.createPolicy }}'
   GOOGLE_CREDENTIALS: ${{ secrets.GCPCRED }}
 
 jobs:
